# pika

./: Cargo.toml  README.md  config.json
src/: file_sync.rs  main.rs  server.rs
