[package]
name = "pika"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "0.28.0"
aws-config = "1.5.8"
aws-types = "0.55.3"
aws-credential-types = "0.55.3"
zip = "0.6"
walkdir = "2.4"
anyhow = "1.0"